fix: prettier, linter in swagger
